--- a/style.css
+++ b/style.css
@@ -25,7 +25,9 @@
 }
 
 body {
-  background: var(--bg-url) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat center center/cover;
+  min-height: 100vh;
+  background-attachment: fixed;
 }
 
 body * {
@@ -34,8 +36,8 @@ body * {
 }
 
 #container {
-  width: 100px;
-  max-width: 588px;
+  width: 100%;
+  max-width: 360px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -162,4 +164,13 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 17px;
+}
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
